--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,6 +37,6 @@ services:
     ports:
       - "6379:6379"
     volumes:
-      - ./docker/redis/data:data
+      - ./docker/redis/data:/redis/data
       - ./docker/redis/redis.conf:/usr/local/etc/redis/redis.conf
 
