--- a/.gitignore
+++ b/.gitignore
@@ -55,5 +55,7 @@ pids
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
+node_modules
+
 docker/mysql/data
 docker/redis/data
