--- a/libs/redis/tsconfig.lib.json
+++ b/libs/redis/tsconfig.lib.json
@@ -1,8 +1,10 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
+    "composite": true,
     "declaration": true,
-    "outDir": "../../dist/libs/redis"
+    "rootDir": "src",
+    "outDir": "../../dist/libs/redis",
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist", "test", "**/*spec.ts"]
