--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bet-back-v2",
+  "name": "sport",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -10,16 +10,16 @@
   ],
   "license": "UNLICENSED",
   "scripts": {
-    "build-base": "nest build b base",
-    "build-wallet": "nest build wallet",
+    "app:dev": "nest start app --watch",
+    "app:debug": "nest start app --debug --watch",
+    "app:prod": "node dist/apps/app/main",
+    "admin:dev": "nest start admin --watch --env-file .env",
+    "admin:debug": "nest start admin --watch --debug",
+    "admin:prod": "node dist/apps/admin/main",
+    "wallet:dev": "nest start wallet --watch",
+    "wallet:debug": "nest start wallet --debug --watch",
+    "wallet:prod": "node dist/apps/wallet/main",
     "format": "prettier --write \"apps/**/*.ts\" \"libs/**/*.ts\"",
-    "start-all": "nest start base --watch && nest start wallet --watch",
-    "start-base:dev": "nest start base --watch",
-    "start-wallet:dev": "nest start wallet --watch",
-    "start-base:debug": "nest start base --debug --watch",
-    "start-wallet:debug": "nest start wallet --debug --watch",
-    "start-base:prod": "node dist/apps/base/main",
-    "start-wallet:prod": "node dist/apps/wallet/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -29,9 +29,15 @@
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
+    "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/platform-fastify": "^11.1.6",
     "@prisma/client": "^6.16.2",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
+    "otpauth": "^9.4.1",
     "prisma": "^6.16.2",
     "redis": "^5.8.0",
     "reflect-metadata": "^0.2.2",
