--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,6 +1,11 @@
 packages:
   - apps/*
   - libs/*
+  - packages/*
 
 onlyBuiltDependencies:
+  - '@nestjs/core'
   - '@prisma/client'
+  - '@prisma/engines'
+  - '@swc/core'
+  - prisma
